syntax = "proto3";

package Gerenciador;

message Time {
    string nome = 1;
    string tecnico = 2;
    int32 pontos = 3;
    int32 qtdJogos = 4;
    map<string, Atleta> atletas = 5;

    message Tecnico {
        string nome = 1;
        int32 idade = 2;
        int32 qtdTitulos = 3;
    }
}

message Atleta {
    string nome = 1;
    Posicao posicao = 2;
    int32 numCamisa = 3;
    int32 qtdTitulos = 4;
    string time = 5;
    int32 idade = 6;

    enum Posicao {
        GOLEIRO = 0;
        ZAGUEIRO = 1;
        LATERAL = 2;
        MEIO_CAMPO = 3;
        ATACANTE = 4;
    }
}

message Message {
    int32 error = 1;
    int32 id = 2;
    string objRef = 3;
    string methodID = 4;
    bytes args = 5;
}